# AivisSpeech-Engine

./: .gitignore  pyproject.toml  run.py  run.spec
.github/workflows/: build-engine.yml  test-engine-package.yml  test-onnxruntime-ggml-ep.yml
api/: index.html
docs/: ggml-onnx-plugin-provider.md  ggml-vulkan-backend-stages.md  jp-bert-gguf-quantization.md  onnx-ggml-linux-build.md  onnx-ggml-plugin-benchmark.md  style-bert-vits2-backend-benchmark.md
docs/res/onnx-ggml-plugin-benchmark/: linux-780m-ggml.json  linux-rtx3060-cuda-ggml-cpu.json  windows-arc-b580-directml-ggml-cpu.json  windows-arc-b580-fp16-matrix.json
docs/res/style-bert-vits2-benchmark-20260625/representative-audio/: macos-m1pro_ggml-metal-native_long.m4a  macos-m1pro_ggml-metal-native_medium.m4a  macos-m1pro_ggml-metal-native_short.m4a  macos-m1pro_onnx-cpu_long.m4a  macos-m1pro_onnx-cpu_medium.m4a  macos-m1pro_onnx-cpu_short.m4a  ubuntu-amd780m_ggml-vulkan-native_long.m4a  ubuntu-amd780m_ggml-vulkan-native_medium.m4a  ubuntu-amd780m_ggml-vulkan-native_short.m4a  (+15 more)
experimental/onnxruntime-ep-aivis-ggml/: README.md  pyproject.toml
experimental/onnxruntime-ep-aivis-ggml/native/: CMakeLists.txt
experimental/onnxruntime-ep-aivis-ggml/native/src/: aivis_ggml_onnx_ep.cc
experimental/onnxruntime-ep-aivis-ggml/src/onnxruntime_ep_aivis_ggml/: __init__.py  artifact_bundle.py  cache.py  cli.py  gguf_writer.py  initializer_pack.py  jp_bert_gguf_writer.py  signature.py  tts_cpp_mapping.py
experimental/onnxruntime-ep-aivis-ggml/tools/: compile_cache.py  compile_jp_bert.py  inspect_model_signature.py  package_artifact_bundle.py  prepare_cache.py  smoke_register_plugin.py  validate_artifact_bundle.py  validate_cache_manifest.py  validate_ep_context_payload.py  write_artifact_bundle_manifest.py
test/integration/: test_onnxruntime_ep_aivis_ggml.py  test_style_bert_vits2_ggml_vulkan.py
test/unit/: test_aivm_gguf_cache.py  test_aivm_infos_repository.py  test_aivm_manager.py  test_benchmark_style_bert_vits2_ggml_vulkan.py  test_onnx_ggml_tensor_mapping.py  test_onnxruntime_ep_aivis_ggml_artifact_bundle.py  test_onnxruntime_ep_aivis_ggml_cache.py  test_onnxruntime_ep_aivis_ggml_jp_bert_gguf_writer.py  test_onnxruntime_ep_aivis_ggml_package.py  test_onnxruntime_ep_aivis_ggml_signature.py  test_run.py  test_run_onnx_provider.py
test/unit/tts_pipeline/: test_style_bert_vits2_tts_engine.py  test_tts_cpp_sidecar.py
tools/: benchmark_onnx_ggml_provider.py  benchmark_style_bert_vits2_ggml_vulkan.py  generate_licenses.py
voicevox_engine/: aivm_gguf_cache.py  aivm_infos_repository.py  aivm_manager.py  aivm_metadata.py  model.py
voicevox_engine/app/: application.py
voicevox_engine/app/routers/: aivm_models.py
voicevox_engine/tts_pipeline/: style_bert_vits2_backend.py  style_bert_vits2_tts_engine.py  tts_cpp_diagnostics.py  tts_cpp_native.py  tts_cpp_sidecar.py  tts_engine.py
(+14 files in other folders)
