[project]
name = "onnxruntime-ep-aivis-ggml"
version = "0.1.0"
description = "Aivis Style-Bert-VITS2 ggml ONNX Runtime Plugin Execution Provider"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
convert = [
  "gguf",
  "numpy",
  "onnx",
]

[project.scripts]
aivis-ggml-onnx-ep-inspect = "onnxruntime_ep_aivis_ggml.cli:inspect_model_signature_main"
aivis-ggml-onnx-ep-prepare-cache = "onnxruntime_ep_aivis_ggml.cli:prepare_cache_main"
aivis-ggml-onnx-ep-smoke-register = "onnxruntime_ep_aivis_ggml.cli:smoke_register_main"
aivis-ggml-onnx-ep-validate-cache = "onnxruntime_ep_aivis_ggml.cli:validate_cache_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/onnxruntime_ep_aivis_ggml"]
artifacts = [
  "src/onnxruntime_ep_aivis_ggml/lib/*",
]

[tool.hatch.build.targets.sdist]
include = [
  "/README.md",
  "/pyproject.toml",
  "/src",
  "/native",
  "/tools",
]
